--- a/index.html
+++ b/index.html
@@ -169,38 +169,15 @@
                                 <div
                                     class="row d-flex slide-padding text-center"
                                 >
-                                    <div class="col">
-                                        <h5 class="mytext text-light">
-                                            Arrival
-                                        </h5>
-
-                                        <h1 class="text-light slide-text">
-                                            9 <span class="fs-3">jul</span>
-                                        </h1>
-                                    </div>
-                                    <div class="col">
-                                        <h5 class="mytext text-light">
-                                            Departure
-                                        </h5>
-                                        <h1 class="text-light slide-text">
-                                            10 <span class="fs-3">jul</span>
-                                        </h1>
-                                    </div>
-                                    <div class="col">
-                                        <h5 class="mytext text-light">
-                                            Guests
-                                        </h5>
-
-                                        <h1 class="slide-text text-light">2</h1>
-                                    </div>
                                     <div
                                         class="col d-flex align-items-center text-center"
                                     >
-                                        <button
-                                            class="mybutton text-light mytext text-center w-100"
+                                        <a
+                                            href="./rooms.html"
+                                            class="mybutton text-light mytext text-center w-50 m-auto"
                                         >
                                             BOOK NOW
-                                        </button>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -228,38 +205,15 @@
                                 <div
                                     class="row d-flex slide-padding text-center"
                                 >
-                                    <div class="col">
-                                        <h5 class="mytext text-light">
-                                            Arrival
-                                        </h5>
-
-                                        <h1 class="text-light slide-text">
-                                            9 <span class="fs-3">jul</span>
-                                        </h1>
-                                    </div>
-                                    <div class="col">
-                                        <h5 class="mytext text-light">
-                                            Departure
-                                        </h5>
-                                        <h1 class="text-light slide-text">
-                                            10 <span class="fs-3">jul</span>
-                                        </h1>
-                                    </div>
-                                    <div class="col">
-                                        <h5 class="mytext text-light">
-                                            Guests
-                                        </h5>
-
-                                        <h1 class="slide-text text-light">2</h1>
-                                    </div>
                                     <div
                                         class="col d-flex align-items-center text-center"
                                     >
-                                        <button
-                                            class="mybutton text-light mytext text-center w-100"
+                                        <a
+                                            href="./rooms.html"
+                                            class="mybutton text-light mytext text-center w-50 m-auto"
                                         >
                                             BOOK NOW
-                                        </button>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -281,38 +235,15 @@
                                 <div
                                     class="row d-flex slide-padding text-center"
                                 >
-                                    <div class="col">
-                                        <h5 class="mytext text-light">
-                                            Arrival
-                                        </h5>
-
-                                        <h1 class="text-light slide-text">
-                                            9 <span class="fs-3">jul</span>
-                                        </h1>
-                                    </div>
-                                    <div class="col">
-                                        <h5 class="mytext text-light">
-                                            Departure
-                                        </h5>
-                                        <h1 class="text-light slide-text">
-                                            10 <span class="fs-3">jul</span>
-                                        </h1>
-                                    </div>
-                                    <div class="col">
-                                        <h5 class="mytext text-light">
-                                            Guests
-                                        </h5>
-
-                                        <h1 class="slide-text text-light">2</h1>
-                                    </div>
                                     <div
                                         class="col d-flex align-items-center text-center"
                                     >
-                                        <button
-                                            class="mybutton text-light mytext text-center w-100"
+                                        <a
+                                            href="./rooms.html"
+                                            class="mybutton text-light mytext text-center w-50 m-auto"
                                         >
                                             BOOK NOW
-                                        </button>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -353,9 +284,7 @@
                 <div class="container">
                     <h2 class="title">
                         Rooms accommodation
-                        <a
-                            href="rooms-category.html"
-                            class="btn btn-sm btn-clean-dark"
+                        <a href="./rooms.html" class="btn btn-sm btn-clean-dark"
                             >View all</a
                         >
                     </h2>
@@ -386,7 +315,9 @@
                                 </div>
                                 <div class="book">
                                     <div>
-                                        <a href="#" class="btn btn-main"
+                                        <a
+                                            href="./rooms.html"
+                                            class="btn btn-main"
                                             >Book now</a
                                         >
                                     </div>
@@ -415,7 +346,9 @@
                                 </div>
                                 <div class="book">
                                     <div>
-                                        <a href="#" class="btn btn-main"
+                                        <a
+                                            href="./rooms.html"
+                                            class="btn btn-main"
                                             >Book now</a
                                         >
                                     </div>
@@ -444,7 +377,9 @@
                                 </div>
                                 <div class="book">
                                     <div>
-                                        <a href="#l" class="btn btn-main"
+                                        <a
+                                            href="./rooms.html"
+                                            class="btn btn-main"
                                             >Book now</a
                                         >
                                     </div>
@@ -473,7 +408,9 @@
                                 </div>
                                 <div class="book">
                                     <div>
-                                        <a href="#" class="btn btn-main"
+                                        <a
+                                            href="./rooms.html"
+                                            class="btn btn-main"
                                             >Book now</a
                                         >
                                     </div>
@@ -920,7 +857,7 @@
                             <div class="book">
                                 <div>
                                     <a
-                                        href="room-overview.html"
+                                        href="./rooms.html"
                                         class="btn btn-danger btn-lg"
                                         >Book</a
                                     >
@@ -1032,7 +969,7 @@
                             <div class="book">
                                 <div>
                                     <a
-                                        href="room-overview.html"
+                                        href="./rooms.html"
                                         class="btn btn-danger btn-lg"
                                         >Book</a
                                     >
@@ -1258,30 +1195,22 @@
                     <div class="col-md-4 col-sm-6 col-xs-12">
                         <ul class="social-icons">
                             <li>
-                                <a
-                                    class="facebook"
-                                    href="https://www.facebook.com/Green-Recipe-Food-Blog-113738341343018"
+                                <a class="facebook" href="#"
                                     ><i class="fab fa-facebook"></i
                                 ></a>
                             </li>
                             <li>
-                                <a
-                                    class="twitter"
-                                    href="https://twitter.com/PaowiiC"
+                                <a class="twitter" href="#"
                                     ><i class="fab fa-twitter"></i
                                 ></a>
                             </li>
                             <li>
-                                <a
-                                    class="instagram"
-                                    href="https://www.instagram.com/greenrecipeblog/"
+                                <a class="instagram" href="#"
                                     ><i class="fab fa-instagram"></i>
                                 </a>
                             </li>
                             <li>
-                                <a
-                                    class="linkedin"
-                                    href="https://www.linkedin.com/in/paula-manese-b32a64197/"
+                                <a class="linkedin" href="#"
                                     ><i class="fab fa-linkedin"></i
                                 ></a>
                             </li>
