--- a/print.html
+++ b/print.html
@@ -238,7 +238,7 @@
                     <div class="col">
                         <h5 class="mytext py-2">Room Type</h5>
 
-                        <img src="./images/luxuryroom.jpg" class="img-fluid" />
+                        <img src="./images/roomImg.jpg" class="img-fluid" />
                     </div>
                     <div class="col d-flex flex-column">
                         <h5 class="text-end mytext py-2">PRICE</h5>
@@ -544,30 +544,22 @@
                     <div class="col-md-4 col-sm-6 col-xs-12">
                         <ul class="social-icons">
                             <li>
-                                <a
-                                    class="facebook"
-                                    href="https://www.facebook.com/Green-Recipe-Food-Blog-113738341343018"
+                                <a class="facebook" href="#"
                                     ><i class="fab fa-facebook"></i
                                 ></a>
                             </li>
                             <li>
-                                <a
-                                    class="twitter"
-                                    href="https://twitter.com/PaowiiC"
+                                <a class="twitter" href="#"
                                     ><i class="fab fa-twitter"></i
                                 ></a>
                             </li>
                             <li>
-                                <a
-                                    class="instagram"
-                                    href="https://www.instagram.com/greenrecipeblog/"
+                                <a class="instagram" href="#"
                                     ><i class="fab fa-instagram"></i
                                 ></a>
                             </li>
                             <li>
-                                <a
-                                    class="linkedin"
-                                    href="https://www.linkedin.com/in/paula-manese-b32a64197/"
+                                <a class="linkedin" href="#"
                                     ><i class="fab fa-linkedin"></i
                                 ></a>
                             </li>
