--- a/roomDisplay.html
+++ b/roomDisplay.html
@@ -403,28 +403,28 @@
                             <li>
                                 <a
                                     class="facebook"
-                                    href="https://www.facebook.com/Green-Recipe-Food-Blog-113738341343018"
+                                    href="#"
                                     ><i class="fab fa-facebook"></i
                                 ></a>
                             </li>
                             <li>
                                 <a
                                     class="twitter"
-                                    href="https://twitter.com/PaowiiC"
+                                    href="#"
                                     ><i class="fab fa-twitter"></i
                                 ></a>
                             </li>
                             <li>
                                 <a
                                     class="instagram"
-                                    href="https://www.instagram.com/greenrecipeblog/"
+                                    href="#"
                                     ><i class="fab fa-instagram"></i
                                 ></a>
                             </li>
                             <li>
                                 <a
                                     class="linkedin"
-                                    href="https://www.linkedin.com/in/paula-manese-b32a64197/"
+                                    href="#"
                                     ><i class="fab fa-linkedin"></i
                                 ></a>
                             </li>
