new room list display feature

--- a/about.html
+++ b/about.html
@@ -262,7 +262,9 @@
                                     src="./images/Regie.png"
                                     class="myimg pt-3"
                                 />
-                                <h5 class="pt-2">Regienald Almoite</h5>
+                                <h5 href="#" class="pt-2 d-block text-dark"></h5>
+                                    Regienald Almoite
+                                </h5>
                                 <h5 class="pt-1">The Mastermind</h5>
                             </div>
                             <div class="col">
