insert a github link on individual profile

--- a/about.html
+++ b/about.html
@@ -276,11 +276,11 @@
                                 <h5 class="pt-1">The Mastermind</h5>
                             </div>
                             <div class="col">
-                                <img
+                                <a href="https://robin0925.github.io/rp-portfolio/"><img
                                     src="./images/Robin.png"
                                     class="myimg pt-3"
-                                />
-                                <h5 class="pt-2">Robin Paje</h5>
+                                        /></a>
+                                <a hre="https://robin0925.github.io/rp-portfolio/"><h5 class="pt-2">Robin Paje</h5></a>
                                 <h5 class="pt-1">The Mastermind</h5>
                             </div>
                         </div>
