add mam pao git hub link

--- a/about.html
+++ b/about.html
@@ -268,11 +268,11 @@
                                 <h5 class="pt-1">The Mastermind</h5>
                             </div>
                             <div class="col">
-                                <img
+                                <a href="https://paulamanese.github.io/portfolio/"><img
                                     src="./images/Pao.png"
                                     class="myimg pt-3"
-                                />
-                                <h5 class="pt-2">Paowii</h5>
+                                                                                        /></a>
+                                <a href="https://paulamanese.github.io/portfolio/"><h5 class="pt-2">Paowii</h5></a>
                                 <h5 class="pt-1">The Mastermind</h5>
                             </div>
                             <div class="col">
