--- a/about.html
+++ b/about.html
@@ -258,11 +258,11 @@
                     <div class="row text-center">
                         <div class="d-flex flex-column flex-md-row">
                             <div class="col">
-                                <img
+                                <a href="https://regie-portfolio.vercel.app/"><img
                                     src="./images/Regie.png"
                                     class="myimg pt-3"
-                                />
-                                <h5 href="#" class="pt-2 d-block text-dark"></h5>
+                                                                                   /></a>
+                               <a href="https://regie-portfolio.vercel.app/"> <h5 href="#" class="pt-2 d-block text-dark"></h5></a>
                                     Regienald Almoite
                                 </h5>
                                 <h5 class="pt-1">The Mastermind</h5>
