about page update

--- a/about.html
+++ b/about.html
@@ -262,8 +262,9 @@
                                     src="./images/Regie.png"
                                     class="myimg pt-3"
                                                                                    /></a>
-                               <a href="https://regie-portfolio.vercel.app/"> <h5 href="#" class="pt-2 d-block text-dark"></h5></a>
-                                    Regienald Almoite
+                               <a href="https://regie-portfolio.vercel.app/" class="text-dark"> 
+                                <h5 class="pt-2 text-dark">
+                                Regienald Almoite</h5></a>
                                 </h5>
                                 <h5 class="pt-1">The Mastermind</h5>
                             </div>
@@ -272,7 +273,7 @@
                                     src="./images/Pao.png"
                                     class="myimg pt-3"
                                                                                         /></a>
-                                <a href="https://paulamanese.github.io/portfolio/"><h5 class="pt-2">Paowii</h5></a>
+                                <a href="https://paulamanese.github.io/portfolio/" class="text-dark"><h5 class="pt-2 text-dark">Paowii</h5></a>
                                 <h5 class="pt-1">The Mastermind</h5>
                             </div>
                             <div class="col">
@@ -280,7 +281,7 @@
                                     src="./images/Robin.png"
                                     class="myimg pt-3"
                                         /></a>
-                                <a hre="https://robin0925.github.io/rp-portfolio/"><h5 class="pt-2">Robin Paje</h5></a>
+                                <a href="https://robin0925.github.io/rp-portfolio/" class="text-dark"><h5 class="pt-2">Robin Paje</h5></a>
                                 <h5 class="pt-1">The Mastermind</h5>
                             </div>
                         </div>
