added portfolio links

--- a/about.html
+++ b/about.html
@@ -269,11 +269,11 @@
                                 <h5 class="pt-1">The Mastermind</h5>
                             </div>
                             <div class="col">
-                                <a href="https://paulamanese.github.io/portfolio/"><img
+                                <a href="https://debuggedportfolio.vercel.app/"><img
                                     src="./images/Pao.png"
                                     class="myimg pt-3"
                                                                                         /></a>
-                                <a href="https://paulamanese.github.io/portfolio/" class="text-dark"><h5 class="pt-2 text-dark">Paowii</h5></a>
+                                <a href="https://debuggedportfolio.vercel.app/" class="text-dark"><h5 class="pt-2 text-dark">Paowii</h5></a>
                                 <h5 class="pt-1">The Mastermind</h5>
                             </div>
                             <div class="col">
